--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "test": "vitest run",
     "lint": "eslint .",
     "format": "prettier --write .",
-    "schema:check": "ts-node scripts/lintLesson.ts content/lessons/*.json"
+    "schema:check": "tsx scripts/lintLesson.ts content/lessons/*.json"
   },
   "dependencies": {
     "next": "^15.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "zustand": "^4.5.2",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@testing-library/react": "^16.0.0",
@@ -26,8 +26,8 @@
     "eslint": "^9.9.0",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
     "typescript": "^5.5.4",
     "vitest": "^2.0.5"
   }
 }
-
