--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
   },
   "devDependencies": {
     "@testing-library/react": "^16.0.0",
+    "@types/react": "19.2.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint": "^9.9.0",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
